--- a/app/views/admin/page_index.html
+++ b/app/views/admin/page_index.html
@@ -18,7 +18,7 @@
     <ul>
       <% page_list.forEach(function(item){ %>
       <li>
-        <a href='/admin/page/edit/<%=item.slug%>'><%=item.title%></a>
+        <a href='/admin/page/edit/<%=item.id%>'><%=item.title%></a>
 
         <div class='action'>
               <span class='edit'>
