--- a/app/views/admin/page_edit.html
+++ b/app/views/admin/page_edit.html
@@ -29,10 +29,7 @@
         <label for='page_slug'><span>Slug</span></label>
         <input type='text' name='slug' id='page_slug' value='<%=page.slug%>' required="">
       </div>
-      <div class='item created'>
-        <label for='page_created'><span>Created</span></label>
-        <input type='text' name='created' id='page_created' value='<%=page.created%>' required=''>
-      </div>
+    
       <div class='clearfix'></div>
     </div>
     <div id='content'>
@@ -54,7 +51,7 @@
 </div>
 </body>
 <script>
-  $('input#post_created').simpleDatepicker({ startdate: 2009, enddate: 2013 });
+  //$('input#post_created').simpleDatepicker({ startdate: 2009, enddate: 2013 });
   (function () {
     var converter = Markdown.getSanitizingConverter();
     var editor = new Markdown.Editor(converter);
