--- a/app/views/theme/default/archives.html
+++ b/app/views/theme/default/archives.html
@@ -17,7 +17,7 @@
     </div>
   </article>
   <div class="sidebar" style="margin-top: 43px;">
-  	<% include ./public/right %>
-	<% include ./public/ad %>
+  	<% include ./public/right.html %>
+	<% include ./public/ad.html %>
   </div>
 </div>
