Signed-off-by: rin <1489760568>

--- a/app/views/theme/default/index.html
+++ b/app/views/theme/default/index.html
@@ -53,14 +53,13 @@
   </div>
     
     <div class="sidebar">
-        <% include ./public/right %>
-	<% include ./public/ad %>
-	<% include ./public/hotpost %>
-        <% include ./public/tag %>      
-        <% include ./public/robot %>
-        <% include ./public/recentcomments %>
-	<% include ./public/hotcomments %>
-        <% include ./public/links %>
+        <% include ./public/right.html %>
+	<% include ./public/ad.html %>
+	<% include ./public/hotpost.html %>
+        <% include ./public/tag.html %>      
+        <% include ./public/recentcomments.html %>
+	<% include ./public/hotcomments.html %>
+        <% include ./public/links.html %>
     </div>
 
 </section>
