--- a/app/views/theme/default/public/hotpost.html
+++ b/app/views/theme/default/public/hotpost.html
@@ -4,7 +4,7 @@
       <div class="wc">
           <ul>
               <%hotpost.forEach(function(item){%>
-              <li><a href="<%=site_url%>/post/<%=item.slug%>" title="<%=item.title%>"><%=: item.title | truncate:22 %></a></li>
+              <li><a href="<%=site_url%>/post/<%=item.slug%>" title="<%=item.title%>"><%=item.title%></a></li>
               <%})%>
           </ul>
         <div class="sep10"></div>
