--- a/app/views/theme/default/archives.html
+++ b/app/views/theme/default/archives.html
@@ -7,7 +7,7 @@
       <ul>
         <%year.archives.forEach(function(item){%>
         <li>
-          <time datetime="<%=item.created%>"><%=item.created%></time>
+          <time datetime="<%=item.addtime%>"><%=item.addtime%></time>
           <a href="<%=site_url%>/post/<%=item.slug%>" title="<%=item.title%>"><%=item.title%></a>
           <span class="clicknum"><%=item.clicknum%>次浏览</span>
         </li>
@@ -16,6 +16,33 @@
       <%})%>
     </div>
   </article>
+  <div id="navigation">
+    <table width='100%'>
+      <tbody>
+      <tr>
+        <td width='120' align='left'>
+          <%if(crtP>1){%>
+          <div class="alignleft">
+            <a href="<%=site_url%>/archives/<%=(crtP - 1)%>">上一页</a>
+          </div>
+          <%}%>
+        </td>
+        <td width='auto' align='center'>
+          <strong class="fade">
+            <%=crtP%>/<%=maxP%>
+          </strong>
+        </td>
+        <td width='120' align='right'>
+          <%if(nextP>crtP){%>
+          <div class="alignright">
+            <a href="<%=site_url%>/archives/<%=nextP%>">下一页</a>
+          </div>
+          <%}%>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
   <div class="sidebar" style="margin-top: 43px;">
   	<% include ./public/right.html %>
 	<% include ./public/ad.html %>
