--- a/app/views/theme/default/index.html
+++ b/app/views/theme/default/index.html
@@ -18,7 +18,7 @@
       </h2>
 
       <div class="meta">
-        <time><%=item.created%></time>
+        <time><%=item.addtime%></time>
       </div>
       <div class="entry"><%-item.content%></div>
     </article>
