Signed-off-by: rin <1489760568>

--- a/app/views/theme/default/archives.html
+++ b/app/views/theme/default/archives.html
@@ -45,6 +45,7 @@
   </div>
   <div class="sidebar" style="margin-top: 43px;">
   	<% include ./public/right.html %>
+    <% include ./public/search.html %>
 	<% include ./public/ad.html %>
   </div>
 </div>
