--- a/app/views/theme/default/index.html
+++ b/app/views/theme/default/index.html
@@ -56,9 +56,8 @@
         <% include ./public/right.html %>
 	<% include ./public/ad.html %>
 	<% include ./public/hotpost.html %>
+  <% include ./public/comments.html %>
         <% include ./public/tag.html %>      
-        <% include ./public/recentcomments.html %>
-	<% include ./public/hotcomments.html %>
         <% include ./public/links.html %>
     </div>
 
