--- a/app/views/theme/default/index.html
+++ b/app/views/theme/default/index.html
@@ -1,15 +1,6 @@
 <section id="main" class="container">
   <section class="posts block">
-  <article class="post">
-<script type="text/javascript">
-    /*760*90 创建于 2015-05-15*/
-    var cpro_id = "u2105002";
-</script>
-<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
 
-
-  
-  </article>
  
     <%posts.forEach(function(item){%>
     <article class="post">
@@ -54,9 +45,9 @@
     
     <div class="sidebar">
         <% include ./public/right.html %>
-	<% include ./public/ad.html %>
+	<% include ./public/ad2.html %>
 	<% include ./public/hotpost.html %>
-  <% include ./public/comments.html %>
+	<% include ./public/ad.html %>
         <% include ./public/tag.html %>      
         <% include ./public/links.html %>
     </div>
