--- a/app/views/theme/default/public/links.html
+++ b/app/views/theme/default/public/links.html
@@ -5,6 +5,11 @@
     <div class="widget about">
       <strong class="wt">友情链接</strong>
       <div class="wc f_link">
+	  	<a href="http://www.9958.pw/" target="_blank">前端博客</a>
+		<a href="http://www.9958.pw/" target="_blank">前端技术博客</a>
+		<a href="http://www.9958.pw/" target="_blank">php技术博客</a>
+		<a href="http://www.9958.pw/" target="_blank">后端技术</a>
+		<a href="http://www.9958.pw/" target="_blank">web技术博客</a>
         <a href="http://blog.xwidea.com/" target="_blank">兴旺博客</a>
 		<a href="http://rongs100.com/" target="_blank">戎sir的基地</a>
 		<a href="http://myslowdesign.com/" target="_blank">慢设计</a>
