--- a/app/views/admin/comment_index.html
+++ b/app/views/admin/comment_index.html
@@ -22,14 +22,14 @@
       	<ul>
       		<% comment_list.forEach(function(item){ %>
       		<li>
-            <input type="checkbox" data-id="<%=item._id%>" />
+            <input type="checkbox" data-id="<%=item.id%>" />
       			<a href='/post?id=<%= item.post_id %>'><%= item.author %></a>
       			<span>&nbsp;post comment on&nbsp;</span>
   
             <time><%= item.created %></time>
             <span>Status:<%= item.status %></span>
-            <a class='action delete' href='/admin/comment/delete/<%=item._id%>'>Delete</a>
-            <a class='action spam' href='/admin/submitSpam/<%=item._id%>'>SPAM</a>
+            <a class='action delete' href='/admin/comment/delete/<%=item.id%>'>Delete</a>
+            <a class='action spam' href='/admin/submitSpam/<%=item.id%>'>SPAM</a>
             <div class='content'><%= item.content %></div>
       		<% }); %>
       	</ul>
