--- a/app/views/admin/index.html
+++ b/app/views/admin/index.html
@@ -30,6 +30,9 @@
         <hr>
         <div><a href="/admin/comment">评论列表</a></div>
         <div><a href="/admin/verifyAkismet" target="_blank">验证Akismet</a></div>
+        <hr>
+        <div><a href="/admin/nav_cat">导航分类</a></div>
+        <div><a href="/admin/nav_list">导航列表</a></div>
       </div>
       <div class="clearfix"></div>
     </div>
