--- a/app/views/theme/default/layout.html
+++ b/app/views/theme/default/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
   <head>
-    <title><%=title%></title>
+    <title><%=title%>-前端后端技术博客</title>
     <meta name="robots" content="all">
     <meta name="keywords" content="<%=keywords%>">
     <meta name="description" content="<%=description%>">
@@ -37,6 +37,7 @@ var _hmt = _hmt || [];
               <li><a href="<%=site_url%>/page/about" title="关于我">关于我</a></li>
               <li><a href="<%=site_url%>/archives" title="文章存档">文章存档</a></li>
               <li><a href="http://tool.9958.pw/" title="时光机">在线工具</a></li>
+              <li><a href="<%=site_url%>/nav" title="网址导航">网址导航</a></li>
 	      <li><a href="<%=site_url%>/page/web" title="网站建设">网站建设</a></li>
           </ul>
         </nav>
@@ -45,7 +46,7 @@ var _hmt = _hmt || [];
     <%- body %>
     <footer id="main-footer">
     <div class="container">
-      <p>Lovingly made by willerce, Powered by <a href="https://github.com/willerce/noderce">Noderce</a> 
+      <p>Lovingly made by willerce, Powered by <a target="_blank" href="https://github.com/9958/NEMBlog">9958</a> 
           | <a href="<%=site_url%>/sitemap.html" target="_blank" title="网站地图">网站地图</a> | <a href="<%=site_url%>/sitemap.xml" target="_blank" title="sitemap">sitemap</a> <a href="http://www.miitbeian.gov.cn/" target="_blank">沪ICP备14000208号</a>
       </p>
       <p>Thanks WebStorm, Nodejs and Express <script src="http://s11.cnzz.com/stat.php?id=5320846&web_id=5320846" language="JavaScript"></script></p>
@@ -74,12 +75,7 @@ cursor: pointer;border-radius: 40px;transition-property: background;transition-d
 <div class="top">↑
 </div>
 
-<script type="text/javascript">
-    /*为了保证用户体验及收益，图片大小不得小于：200*180*/
-    /* 创建于 2015-05-15*/
-var cpro_id = "u2105068";
-</script>
-<script src="http://cpro.baidustatic.com/cpro/ui/i.js" type="text/javascript"></script>
+
 
   </body>
 </html>
