--- a/app/views/theme/default/public/ad2.html
+++ b/app/views/theme/default/public/ad2.html
@@ -1,5 +1,9 @@
 <div class="block">
     <div class="widget about">
-<script type="text/javascript"> (function(win,doc){ var s = doc.createElement("script"), h = doc.getElementsByTagName("head")[0]; if (!win.alimamatk_show) { s.charset = "gbk"; s.async = true; s.src = "http://a.alimama.cn/tkapi.js"; h.insertBefore(s, h.firstChild); }; var o = { pid: "mm_30108446_6658350_23604243",/*推广单元ID，用于区分不同的推广渠道*/ appkey: "",/*通过TOP平台申请的appkey，设置后引导成交会关联appkey*/ unid: ""/*自定义统计字段*/ }; win.alimamatk_onload = win.alimamatk_onload || []; win.alimamatk_onload.push(o); })(window,document);</script>
-    </div>
+<script type="text/javascript">
+    /*300*54 创建于 2016-02-25*/
+    var cpro_id = "u2532001";
+</script>
+<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+</div>
   </div>
