Signed-off-by: rin <1489760568>

--- a/app/views/admin/index.html
+++ b/app/views/admin/index.html
@@ -31,6 +31,8 @@
         <div><a href="/admin/comment">评论列表</a></div>
         <div><a href="/admin/verifyAkismet" target="_blank">验证Akismet</a></div>
         <hr>
+        <div><a href="/admin/tags">标签库</a></div>
+        <hr>
         <div><a href="/admin/nav_cat">导航分类</a></div>
         <div><a href="/admin/nav_list">导航列表</a></div>
       </div>
