--- a/app/views/theme/default/layout.html
+++ b/app/views/theme/default/layout.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
   <head>
-    <title><%=title%>-前端后端技术博客</title>
+    <title><%=title%>-前端技术-后端技术-web技术分享博客</title>
     <meta name="robots" content="all">
     <meta name="keywords" content="<%=keywords%>">
     <meta name="description" content="<%=description%>">
-    <link rel="stylesheet" href="<%=site_url%>/theme/assets/style.css">
+    <link rel="stylesheet" href="/theme/assets/style.css">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <script src="<%=site_url%>/libs/jquery.min.js"></script>
@@ -38,7 +38,6 @@ var _hmt = _hmt || [];
               <li><a href="<%=site_url%>/archives" title="文章存档">文章存档</a></li>
               <li><a href="http://tool.9958.pw/" title="时光机">在线工具</a></li>
               <li><a href="<%=site_url%>/nav" title="网址导航">网址导航</a></li>
-	      <li><a href="<%=site_url%>/page/web" title="网站建设">网站建设</a></li>
           </ul>
         </nav>
       </div>
@@ -46,10 +45,21 @@ var _hmt = _hmt || [];
     <%- body %>
     <footer id="main-footer">
     <div class="container">
-      <p>Lovingly made by willerce, Powered by <a target="_blank" href="https://github.com/9958/NEMBlog">9958</a> 
-          | <a href="<%=site_url%>/sitemap.html" target="_blank" title="网站地图">网站地图</a> | <a href="<%=site_url%>/sitemap.xml" target="_blank" title="sitemap">sitemap</a> <a href="http://www.miitbeian.gov.cn/" target="_blank">沪ICP备14000208号</a>
+      <p>
+	  我的：
+	  <a href="http://blog.csdn.net/ldl_xz" target="_blank">csdn博客</a>
+	  | <a href="http://www.cnblogs.com/rin9958/" target="_blank">博客园</a>
+	  | <a href="http://ldl-xz.iteye.com/" target="_blank">iteye博客</a>
+	  | <a href="https://github.com/9958" target="_blank">github</a>
+	  | <a href="http://blog.sina.com.cn/u/2587900712" target="_blank">新浪博客</a>
+	  | <a href="http://my.oschina.net/u/1179286" target="_blank">开源中国博客</a>
+          | <a href="<%=site_url%>/sitemap.html" target="_blank" title="网站地图">网站地图</a> 
+		  | <a href="<%=site_url%>/sitemap.xml" target="_blank" title="sitemap">sitemap</a> 
       </p>
-      <p>Thanks WebStorm, Nodejs and Express <script src="http://s11.cnzz.com/stat.php?id=5320846&web_id=5320846" language="JavaScript"></script></p>
+      <p>
+	  Copyright © Rin部落 All Rights Reserved   
+	  <a href="http://www.miitbeian.gov.cn/" target="_blank">沪ICP备14000208号</a>
+	  <script src="http://s11.cnzz.com/stat.php?id=5320846&web_id=5320846" language="JavaScript"></script></p>
     </div>
     </footer>
 <script type="text/javascript">
@@ -65,8 +75,8 @@ $('body,html').animate({scrollTop:0},800);});
 
 </script>
 <style>
-.top {position: fixed;display: none;width: 55px;height: 55px;right: 50px;bottom: 50px;
-background: #D6D6D6;color: #fff;font-size: 36px;line-height: 55px;text-align: center;
+.top {position: fixed;display: none;width: 55px;height: 55px;right: 50px;bottom: 70px;
+background: #49483e;color: #fff;font-size: 36px;line-height: 55px;text-align: center;
 cursor: pointer;border-radius: 40px;transition-property: background;transition-duration: 0.5s;
 -webkit-transition-property: background;-webkit-transition-duration: 0.5s;-moz-transition-property: background;
 -moz-transition-duration: 0.5s;
