--- a/app/views/theme/default/public/links.html
+++ b/app/views/theme/default/public/links.html
@@ -4,20 +4,43 @@
 </style>
     <div class="widget about">
       <strong class="wt">友情链接</strong>
-      <div class="wc f_link">
-	  	<a href="http://www.9958.pw/" target="_blank">前端博客</a>
-		<a href="http://www.9958.pw/" target="_blank">前端技术博客</a>
-		<a href="http://www.9958.pw/" target="_blank">php技术博客</a>
-		<a href="http://www.9958.pw/" target="_blank">后端技术</a>
-		<a href="http://www.9958.pw/" target="_blank">web技术博客</a>
-        <a href="http://blog.xwidea.com/" target="_blank">兴旺博客</a>
-		<a href="http://rongs100.com/" target="_blank">戎sir的基地</a>
-		<a href="http://myslowdesign.com/" target="_blank">慢设计</a>
-		<a href="http://x-rr.com/" target="_blank">肉总</a>
-		<a href="http://www.haorooms.com/" target="_blank">haorooms前端博客</a>
-		<a href="https://www.hyl.pw/" target="_blank">何延龙</a>
-		<a href="https://blog.hyl.pw/" target="_blank">何延龙的博客</a>
-        <div class="sep10"></div>
+      <div class="wc">
+      	<ul class="friendship">
+      		<li>
+      			<a href="http://www.9958.pw/" title="前端博客">前端博客</a>
+      		</li>
+      		<li>
+      			<a href="http://www.9958.pw/" title="前端技术">前端技术</a>
+      		</li>
+      		<li>
+      			<a href="http://www.9958.pw/" title="web技术">web技术</a>
+      		</li>
+      		<li>
+      			<a href="http://www.9958.pw/" title="后端技术">后端技术</a>
+      		</li>
+      		<li>
+      			<a href="http://blog.xwidea.com/" title="兴旺博客" target="_blank">兴旺博客</a>
+      		</li>
+      		<li>
+      			<a href="http://rongs100.com/" title="戎sir的基地" target="_blank">戎sir的基地</a>
+      		</li>
+      		<li>
+      			<a href="http://myslowdesign.com/" title="慢设计" target="_blank">慢设计</a>
+      		</li>
+      		<li>
+      			<a href="http://x-rr.com/" title="肉总" target="_blank">肉总</a>
+      		</li>
+			<li>
+      			<a href="http://www.haorooms.com/" title="haorooms前端博客" target="_blank">haorooms前端博客</a>
+      		</li>
+      		<li>
+      			<a href="https://www.hyl.pw/" title="何延龙" target="_blank">何延龙</a>
+      		</li>
+      	
+      		<li>
+      			<a href="http://blog.hyl.pw/" title="何延龙的博客" target="_blank">何延龙的博客</a>
+      		</li>
+      	</ul>
       </div>
     </div>
   </div>
