--- a/app/views/theme/default/public/right.html
+++ b/app/views/theme/default/public/right.html
@@ -2,16 +2,25 @@
 <div class="block">
   
     <div class="widget about">
-      <strong class="wt">关于我</strong>
+      <strong class="wt">关于rin部落</strong>
       <div class="wc">
-        <p>
-          <img src="http://sfault-avatar.b0.upaiyun.com/249/218/2492188166_medium40" alt="rin" align="left"
-               style="margin-right: 7px;">rin，后端工程师，；就职于<a href="http://www.shinedeliver.com/" target="_blank">兴安得力</a>
-          <br/>关注前后端技术，欢迎交流。承接各类网站系统，价格从优，预祝合作愉快~<br/>Email:
-          1489760568@qq.com
+        <p style="text-indent: 2em;">
+          rin部落一个以web应用为中心,面向网络上所有作为Web开发的读者及程序爱好者的技术博客。
         </p>
-        
+		<p style="text-indent: 2em;">
+		博客主要以学习并钻研技术,分享与记录工作和生活中的点点滴滴.博客的宗旨是与大家交流互勉共同进步！
+		</p>
+
         
       </div>
+	  <strong class="wt">联系方式</strong>
+	   <div class="wc" style="padding-top:0;padding-bottom:0;">
+	   		<a href="http://wpa.qq.com/msgrd?v=3&uin=1489760568&site=qq&menu=yes" target="_blank" style="margin-left: 0px;" class="contractmethod">
+				<i class="iconfont">&#xe603;</i>
+			</a>
+			<a href="https://github.com/9958" target="_blank" class="contractmethod">
+				<i class="iconfont" style="position:relative;top:4px;">&#xe606;</i>
+			</a>
+	   </div>
     </div>
   </div>
