--- a/app/views/theme/default/sitemap_baidu.html
+++ b/app/views/theme/default/sitemap_baidu.html
@@ -3,11 +3,9 @@
      
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>站点地图 - rin博客</title>
-
-<meta name="keywords" content="站点地图,rin博客">
-<meta name="keywords" content="php个人博客,关于我,梦想清单,文章归档,机器人,友情链接,ejs ,nodejs ,express ,rss ,json ,nginx ,capp ,验证码 ,appfog ,mongodb ,js ,jquery ,ecshop,www.9958.pw">
-<meta name="description" content="php技术博客，php个人博客,php博客,www.9958.pw,专注于php编程，总结技术难点心得，记录个人php技术发展历程，分享优质php代码，交流php心得体会，推动php的发展！">
+<title>站点地图 - rin博客-前端技术-后端技术-web技术分享博客</title>
+ <meta name="keywords" content="<%=keywords%>"> 
+ <meta name="description" content="<%=description%>">
 <meta name="generator" content="Baidu SiteMap Generator">
 <meta name="author" content="www.9958.pw">
 <meta name="copyright" content="www.9958.pw">
