--- a/app/views/theme/default/sitemap_google.html
+++ b/app/views/theme/default/sitemap_google.html
@@ -12,7 +12,7 @@
     <%year.archives.forEach(function(item){%>
     <url>
         <loc><%=site_url%>/post/<%=item.slug%></loc>
-        <lastmod><%=item.created%></lastmod>
+        <lastmod><%=item.addtime%></lastmod>
         <changefreq>monthly</changefreq>
         <priority>0.6</priority>
     </url>
