Signed-off-by: rin <1489760568>

--- a/app/views/theme/default/index.html
+++ b/app/views/theme/default/index.html
@@ -48,7 +48,8 @@
 	<% include ./public/ad2.html %>
 	<% include ./public/hotpost.html %>
 	<% include ./public/ad.html %>
-        <% include ./public/tag.html %>      
+        <% include ./public/tag.html %>   
+        <% include ./public/hotpost_week.html %>   
         <% include ./public/links.html %>
     </div>
 
