--- a/app/views/theme/default/layout.html
+++ b/app/views/theme/default/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
   <head>
-    <title><%=title%>-前端技术-后端技术-web技术分享博客</title>
+    <title><%=title%>-web前端开发-主流web技术分享博客</title>
     <meta name="robots" content="all">
     <meta name="keywords" content="<%=keywords%>">
     <meta name="description" content="<%=description%>">
@@ -53,6 +53,7 @@ var _hmt = _hmt || [];
 	  | <a href="https://github.com/9958" target="_blank">github</a>
 	  | <a href="http://blog.sina.com.cn/u/2587900712" target="_blank">新浪博客</a>
 	  | <a href="http://my.oschina.net/u/1179286" target="_blank">开源中国博客</a>
+	  | <a href="http://blog.chinaunix.net/uid/30959623.html" target="_blank">ChinaUnix博客</a>
           | <a href="<%=site_url%>/sitemap.html" target="_blank" title="网站地图">网站地图</a> 
 		  | <a href="<%=site_url%>/sitemap.xml" target="_blank" title="sitemap">sitemap</a> 
       </p>
