--- a/app/views/theme/default/public/links.html
+++ b/app/views/theme/default/public/links.html
@@ -10,13 +10,13 @@
       			<a href="http://www.9958.pw/" title="前端博客">前端博客</a>
       		</li>
       		<li>
-      			<a href="http://www.9958.pw/" title="前端技术">前端技术</a>
+      			<a href="http://www.9958.pw/" title="web前端开发">web前端开发</a>
       		</li>
       		<li>
-      			<a href="http://www.9958.pw/" title="web技术">web技术</a>
+      			<a href="http://www.9958.pw/" title="PHP博客">PHP博客</a>
       		</li>
       		<li>
-      			<a href="http://www.9958.pw/" title="后端技术">后端技术</a>
+      			<a href="http://www.9958.pw/" title="IT技术博客">IT技术博客</a>
       		</li>
       		<li>
       			<a href="http://blog.xwidea.com/" title="兴旺博客" target="_blank">兴旺博客</a>
@@ -24,9 +24,7 @@
       		<li>
       			<a href="http://rongs100.com/" title="戎sir的基地" target="_blank">戎sir的基地</a>
       		</li>
-      		<li>
-      			<a href="http://myslowdesign.com/" title="慢设计" target="_blank">慢设计</a>
-      		</li>
+      
       		<li>
       			<a href="http://x-rr.com/" title="肉总" target="_blank">肉总</a>
       		</li>
