--- a/app/views/theme/default/sitemap_baidu.html
+++ b/app/views/theme/default/sitemap_baidu.html
@@ -3,7 +3,7 @@
      
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>站点地图 - rin博客-前端技术-后端技术-web技术分享博客</title>
+<title>站点地图 - rin博客-web前端开发-主流web技术分享博客</title>
  <meta name="keywords" content="<%=keywords%>"> 
  <meta name="description" content="<%=description%>">
 <meta name="generator" content="Baidu SiteMap Generator">
