markdown 样式修改 模板URL修改

--- a/app/views/theme/default/assets/style.css
+++ b/app/views/theme/default/assets/style.css
@@ -703,6 +703,29 @@ li.L7,
 li.L9 {
     /* */
 }
+
+.entry blockquote {
+    padding: 10px 15px;
+    margin-bottom: 20px;
+    background-color: whitesmoke;
+    border-left: 4px solid #999999;
+    word-break: break-word;
+    font-size: 15px;
+    font-weight: 100;
+    line-height: 30px;
+}
+.entry blockquote:before, .entry blockquote:after {
+    content: "";
+}
+.entry blockquote p:last-child {
+    margin: 0;
+}
+.entry blockquote p {
+    font-size: 15px;
+    font-weight: normal;
+    line-height: 1.7;
+}
+
 .relative_article{line-height: 22px; margin-bottom: 10px;}
 .post .entry p.relative_article{ line-height: 22px; margin-bottom: 10px;}
 .relative_article_title{ font-size: 14px;}
