--- a/app/views/admin/tag.html
+++ b/app/views/admin/tag.html
@@ -56,7 +56,7 @@
       function save(){
         var data = {
           id: $('#id').val(),
-          name: $('#title').val(),
+          title: $('#title').val(),
           count: $('#count').val()
         }
         $.ajax({
