--- a/app/views/theme/default/public/links.html
+++ b/app/views/theme/default/public/links.html
@@ -35,6 +35,9 @@
       		<li>
       			<a href="http://blog.hyl.pw/" title="何延龙的博客" target="_blank">何延龙的博客</a>
       		</li>
+			<li>
+      			<a href="http://www.moguf.com/" title="蘑菇房" target="_blank">蘑菇房</a>
+      		</li>
       	</ul>
       </div>
     </div>
