update link favicon robots

--- a/app/views/theme/default/public/links.html
+++ b/app/views/theme/default/public/links.html
@@ -18,9 +18,7 @@
       		<li>
       			<a href="http://blog.xwidea.com/" title="兴旺博客" target="_blank">兴旺博客</a>
       		</li>
-      		<li>
-      			<a href="http://rongs100.com/" title="戎sir的基地" target="_blank">戎sir的基地</a>
-      		</li>
+
       
       		<li>
       			<a href="http://x-rr.com/" title="肉总" target="_blank">肉总</a>
@@ -28,16 +26,16 @@
 			<li>
       			<a href="http://www.haorooms.com/" title="haorooms前端博客" target="_blank">haorooms前端博客</a>
       		</li>
-      		<li>
-      			<a href="https://www.hyl.pw/" title="何延龙" target="_blank">何延龙</a>
-      		</li>
-      	
-      		<li>
-      			<a href="http://blog.hyl.pw/" title="何延龙的博客" target="_blank">何延龙的博客</a>
-      		</li>
+ 
 			<li>
       			<a href="http://www.moguf.com/" title="蘑菇房" target="_blank">蘑菇房</a>
       		</li>
+			<li>
+      			<a href="http://www.phpsong.com/" title="小松博客" target="_blank">小松博客</a>
+      		</li>
+			<li>
+      			<a href="http://www.xuanfengge.com/" title="轩枫阁 – 前端开发 | web前端技术博客" target="_blank">轩枫阁</a>
+      		</li>			
       	</ul>
       </div>
     </div>
