[私有] 底部个人博客链接去除新浪，添加友情链接

--- a/app/views/theme/default/public/links.html
+++ b/app/views/theme/default/public/links.html
@@ -35,6 +35,12 @@
       		</li>
 			<li>
       			<a href="http://www.xuanfengge.com/" title="轩枫阁 – 前端开发 | web前端技术博客" target="_blank">轩枫阁</a>
+      		</li>
+			<li>
+      			<a href="http://www.asheep.cn/" title="一只羊博客" target="_blank">一只羊博客</a>
+      		</li>
+			<li>
+      			<a href="http://www.aseoe.com/" title="前端开发" target="_blank">前端开发</a>
       		</li>			
       	</ul>
       </div>
