--- a/app/views/admin/post_update.html
+++ b/app/views/admin/post_update.html
@@ -40,7 +40,6 @@
         <input type='text' name='description' id='description'  value="<%=post.description%>" placeholder="描述，在英文逗号分割">
       </div>
       <div class='clearfix'></div>
-      <div style="display: none;" id="post_content"><%- post.content %></div>
     </div>
     <div id='content'>
       <div class="wmd-panel">
@@ -64,7 +63,8 @@
     
     $(function() {
         
-        
+        $.get('/admin/post/edit/<%=post.id%>?ajax=1', function(md){
+         
           testEditor = editormd("test-editormd", {
               width: "100%",
               height: 740,
@@ -72,7 +72,7 @@
               theme : "dark",
               previewTheme : "dark",
               editorTheme : "pastel-on-dark",
-              markdown : html_decode($("#post_content").html()),
+              markdown : md.result.content,
               codeFold : true,
               //syncScrolling : false,
               saveHTMLToTextarea : true,    // 保存 HTML 到 Textarea
@@ -107,6 +107,7 @@
                   //this.resize("100%", 640);
               }
           });
+        });
         
         
         // 保存草稿
@@ -121,33 +122,7 @@
         
     });
 
-function html_encode(str)   
-{   
-  var s = "";   
-  if (str.length == 0) return "";   
-  s = str.replace(/&/g, "&amp;");   
-  s = s.replace(/</g, "&lt;");   
-  s = s.replace(/>/g, "&gt;");   
-  s = s.replace(/ /g, "&nbsp;");   
-  s = s.replace(/\'/g, "&#39;");   
-  s = s.replace(/\"/g, "&quot;");   
-  s = s.replace(/\n/g, "<br>");   
-  return s;   
-}   
- 
-function html_decode(str)   
-{   
-  var s = "";   
-  if (str.length == 0) return "";   
-  //s = str.replace(/&amp;/g, "&");   
-  //s = s.replace(/&lt;/g, "<");   
-  s = str.replace(/&gt;/g, ">");   
-  //s = s.replace(/&nbsp;/g, " ");   
-  //s = s.replace(/&#39;/g, "\'");   
-  //s = s.replace(/&quot;/g, "\"");   
-  //s = s.replace(/<br>/g, "\n");   
-  return s;   
-}
+
     function post_article(status){
       var data = {
         id: $('#post_old_id').val(),
@@ -159,7 +134,7 @@ function html_decode(str)
         tags: $('#post_tags').val(),
         status: status
       };
-      console.dir(data);
+      
       $.ajax({
         'url': '/admin/post/edit/<%=post.id%>',
         'type': 'post',
