自适应调整

--- a/app/views/theme/default/public/right.html
+++ b/app/views/theme/default/public/right.html
@@ -1,5 +1,5 @@
   
-<div class="block">
+<div class="block" style="overflow:inherit;">
   
     <div class="widget about">
       <strong class="wt">关于rin部落</strong>
@@ -14,11 +14,15 @@
         
       </div>
 	  <strong class="wt">联系方式</strong>
-	   <div class="wc" style="padding-top:0;padding-bottom:0;">
+	   <div class="wc" style="padding-top:0;padding-bottom:0;position:relative;">
 	   		<a href="http://wpa.qq.com/msgrd?v=3&uin=1489760568&site=qq&menu=yes" target="_blank" style="margin-left: 0px;" class="contractmethod">
 				<i class="iconfont">&#xe603;</i>
 			</a>
-			<a href="https://github.com/9958" target="_blank" class="contractmethod">
+			<a href="javascript:" class="contractmethod weixinhover">
+				<i class="iconfont" style="style="font-size:3.5em;"">&#xe600;</i>
+				<div class="hoverimg"></div>
+			</a>
+			<a href="https://github.com/9958" target="_blank" class="contractmethod ">
 				<i class="iconfont" style="position:relative;top:4px;">&#xe606;</i>
 			</a>
 	   </div>
