--- a/app/views/theme/default/layout.html
+++ b/app/views/theme/default/layout.html
@@ -19,21 +19,33 @@
     <script src="<%=site_url%>/libs/html5.js"></script>
     <![endif]-->
 	<script src="<%=site_url%>/libs/jquery.min.js"></script>
-
+  
   </head>
   <body>
-    <header id="main-header">
-      <div class="container"><a id="logo" href="<%=site_url%>" title="<%=name%>"><%=name%></a>
-        <nav>
-          <ul>
-              <li><a href="<%=site_url%>/page/about" title="关于我">关于我</a></li>
-              <li><a href="<%=site_url%>/archives" title="文章存档">文章存档</a></li>
-              <li><a href="http://tool.9958.pw/" title="时光机">在线工具</a></li>
-              <li><a href="<%=site_url%>/nav" title="网址导航">网址导航</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+    <div class="navbar navbar-default">
+        <div class="container">
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse-nav">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand" href="/" title="rin部落">
+                    <span class="logo">
+                     rin部落
+                    </span>
+                  </a>
+                </div>
+              <div class="collapse navbar-collapse navbar-collapse-nav" style="height:0px;">
+                    <ul class="nav navbar-nav navbar-right">
+                          <li><a href="<%=site_url%>/page/about" title="关于我">关于我</a></li>
+                          <li><a href="<%=site_url%>/archives" title="文章存档">文章存档</a></li>
+                          <li id="onlineTool"><a href="http://tool.9958.pw/" title="在线工具">在线工具</a></li>
+                          <li id="siteNav"><a href="<%=site_url%>/nav" title="网址导航">网址导航</a></li>
+                    </ul>
+                </div>
+          </div>
+    </div>
     <%- body %>
     <footer id="main-footer">
     <div class="container">
@@ -82,4 +94,5 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
+<script src="<%=site_url%>/libs/main.js"></script>
 </html>
